Arquetipo completo con el modelo Cliente.

--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -2,7 +2,7 @@
 <a href="{% url 'cliente_create' %}">Agregar nuevo cliente</a>
 <ul>
   {% for cliente in clientes %}
-    <li>{{ cliente.nombre }} {{ cliente.apellido }} - {{ cliente.email }}</li>
+    <li>{{ cliente.nombre }} {{ cliente.apellido }} - {{ cliente.telefono }}</li>
   {% empty %}
     <li>No hay clientes registrados.</li>
   {% endfor %}
