--- a/core/templates/cliente/cliente_form.html
+++ b/core/templates/cliente/cliente_form.html
@@ -11,7 +11,7 @@
     {{ form.as_p }}
     <div class="form-buttons">
       <button class="btn save" type="submit">GUARDAR</button>
-      <a href="#" class="btn cancel">CANCELAR</a>
+      <button href="#" class="btn cancel">CANCELAR</button>
     </div>
   </form>
 
