--- a/core/static/css/formularios.css
+++ b/core/static/css/formularios.css
@@ -4,51 +4,72 @@
     flex-direction: column;
     gap: 15px;
     position: relative;
+    align-items: flex-start; 
+    min-height: 500px;
   }
   
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    max-width: 300px;
-  }
-  
-  input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .form-buttons {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  
-  .btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: bold;
-  }
-  
-  .save {
-    background-color: #cddc39;
-  }
-  
-  .cancel {
-    background-color: #9b9898;
-  }
-  
-  .reloj-img {
-    position: absolute;
-    right: 50px;
-    top: 80px;
-    width: 150px;
-  }
-  
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 300px;
+}
+
+input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.save {
+  background-color: #cddc39;
+}
+
+.cancel {
+  background-color: #9b9898;
+}
+
+.reloj-img {
+  max-width: 100%;
+  height: auto;
+  max-height: 500px;
+  object-fit: contain;
+  align-self: flex-start;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.left-column {
+  float: left;
+  width: 500px;
+  padding-right: 10px;
+  padding-left: 30px;
+}
+
+.right-column {
+  position: fixed; 
+  top: 220px; 
+  right: 450px; 
+  width: 300px;
+  max-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
