--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Servi-Watch{% endblock %}</title>
+  <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">-->
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="stylesheet" href="{% static 'css/formularios.css' %}">
 </head>
@@ -58,11 +59,12 @@
           </li>
           <li class="{% if '/empleados/' in request.path or request.path == '/empleados' %} active {% endif %}">
             <a href="#">
+            <span>
               <img src="{% static 'images/clientes.png' %}" alt="Empleados" class="icon">
             </span>
             Gestión de empleados
             </a>
-            <span>
+            
           </li>
           <li class="{% if '/usuarios/' in request.path or request.path == '/usuarios' %} active {% endif %}">
             <a href="#">
@@ -119,11 +121,13 @@
       </nav>
     </aside>
 
+    
     <!-- Contenido principal -->
     <section class="content">
       {% block content %}
       {% endblock %}
     </section>
   </div>
+  <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>-->
 </body>
 </html>
