--- a/core/static/css/formularios.css
+++ b/core/static/css/formularios.css
@@ -25,6 +25,9 @@ input {
   display: flex;
   gap: 10px;
   margin-top: 10px;
+  position: fixed;
+  bottom: 50px;
+  right: 70px;
 }
 
 .btn {
@@ -33,14 +36,33 @@ input {
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
+  transition: none !important;
+  
 }
 
+
 .save {
-  background-color: #cddc39;
+  background-color: #D4E484;
+  border: 2px solid #626E15;
+
 }
 
 .cancel {
-  background-color: #9b9898;
+  background-color: #C7C7C7;
+  border: 2px solid #626E15;
+  
+}
+
+.btn:hover.save {
+  background-color: #C9DC4E !important; 
+  color: inherit !important; 
+  border-color: #626E15 !important; 
+}
+
+.btn:hover.cancel {
+  background-color: #a9a5a5 !important; 
+  color: inherit !important; 
+  border-color: #626E15 !important; 
 }
 
 .reloj-img {
@@ -60,16 +82,30 @@ body {
   float: left;
   width: 500px;
   padding-right: 10px;
-  padding-left: 30px;
+  padding-left: 40px;
 }
 
 .right-column {
   position: fixed; 
-  top: 220px; 
-  right: 450px; 
+  top: 180px; 
+  right: 440px; 
   width: 300px;
   max-height: 500px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
+}
+
+.titulo {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 36px;
+  padding-left: 40px;
+}
+
+h4{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  padding-left: 40px;
 }
