--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,7 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Servi-Watch{% endblock %}</title>
-  <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">-->
+  <!--Fuentes de tipografia (Google Font)-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!--Link de bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <!--CSS creados-->
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="stylesheet" href="{% static 'css/formularios.css' %}">
 </head>
@@ -28,7 +35,7 @@
   </header>
 
   <!-- Contenedor principal debajo de la topbar -->
-  <div class="main-container">
+  <div class="main-container" id="sidebar">
     <!-- Sidebar izquierda -->
     <aside class="sidebar">
       <div class="user-info {% if '/usuario' in request.path or request.path == '/admin' %} user-active {% endif %}" href="#">
@@ -94,11 +101,12 @@
             </a>
           </li>
           <li class="{% if '/productos/' in request.path or request.path == '/productos' %} active {% endif %}">
-            <a href="#"></a>
-            <span>
-              <img src="{% static 'images/reloj 1.png' %}" alt="Productos" class="icon">
-            </span>
-            Gestión de productos
+            <a href="#">
+              <span>
+                <img src="{% static 'images/reloj 1.png' %}" alt="Productos" class="icon">
+              </span>
+              Gestión de productos
+            </a>
           </li>
           <li class="{% if '/servicios/' in request.path or request.path == '/servicios' %} active {% endif %}">
             <a href="#">
@@ -128,6 +136,7 @@
       {% endblock %}
     </section>
   </div>
-  <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
