--- a/core/templates/cliente/cliente_form.html
+++ b/core/templates/cliente/cliente_form.html
@@ -9,25 +9,25 @@
 
   <div>
     <div class="left-column">
-    <form method="POST">
+    <form method="POST" class="custom-form">
       {% csrf_token %}
 
       <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">
+        <span class="input-group-text form-span" id="basic-addon1">
           <i class="bi bi-person-fill fs-4 text-secondary"></i>
         </span>
         {{ form.nombre }}
       </div>
 
       <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">
+        <span class="input-group-text form-span" id="basic-addon1">
           <i class="bi bi-person-fill fs-4 text-secondary"></i>     
         </span>
         {{ form.apellido }}
       </div>
 
       <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">
+        <span class="input-group-text form-span" id="basic-addon1">
           <i class="bi bi-telephone-fill fs-4 text-secondary"></i>
         </span>
         {{ form.telefono }}
@@ -45,7 +45,10 @@
   </div>
   <div class="form-buttons">
     <button class="btn save" type="submit">GUARDAR</button>
-    <button type="button" class="btn cancel" onclick="window.location.href='{% url 'cliente_list' %}';">CANCELAR</button>
+    <a href="{% url 'cliente_list' %}">
+      <button type="button" class="btn cancel">CANCELAR</button>
+    </a>
+
   </div>
 
 {% endblock %}
