--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Lista de Clientes</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'styles.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'css/ventana.css' %}">
 </head>
 <body>
+  
   <div class="container py-5">
 
     <div class="d-flex justify-content-between align-items-center mb-4">
@@ -43,7 +45,28 @@
     {% endif %}
 
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  {% if messages %}
+  <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content">
+        <div class="modal-header justify-content-center">
+          <h5 class="modal-title" id="confirmModalLabel">CLIENTE AGREGADO</h5>
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn-cerrar" data-bs-dismiss="modal">VOLVER</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // Mostrar el modal si hay mensajes
+    var modal = new bootstrap.Modal(document.getElementById('confirmModal'));
+    modal.show();
+  </script>
+  {% endif %}
+  
 </body>
 </html>
