--- a/core/templates/login/login.html
+++ b/core/templates/login/login.html
@@ -41,7 +41,7 @@
                 
                 <button type="submit" class="login-button">ENTRAR</button>
                 
-                <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
+                <a href="{% url 'recuperar_contraseña' %}" class="forgot-password">¿Olvidaste tu contraseña?</a>
             </form>
         </div>
     </div>
