formulario de agregar usuario

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,6 +14,7 @@
   <!--CSS creados-->
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   <link rel="stylesheet" href="{% static 'css/formularios.css' %}">
+  <link rel="stylesheet" href="{% static 'css/ventana.css' %}">
 </head>
 <body>
   <!-- Barra superior -->
