--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -90,12 +90,12 @@ body {
 }
 
 .user-info.active{
-  width: 240px;
-  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 40px;
   background-color: #C9DC4E;
-  position: absolute;
-  padding: 0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-bottom: 2px solid #333;
 }
 
 .user-info h2 {
